# aiogzip

./: .codexrc  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  SECURITY.md  data.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  versions.json
.claude/commands/: release-prep.md  release-tag.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
1.11/: 404.html  index.html  objects.inv  sitemap.xml
1.11/adr-isal/: index.html
1.11/api/: index.html
1.11/contributing/: index.html
1.11/errors/: index.html
1.11/examples/: index.html
1.11/migration/: index.html
1.11/performance/: index.html
1.11/recipes/: index.html
1.11/search/: search_index.json
1.11/streaming/: index.html
2.0/: 404.html  index.html  objects.inv  sitemap.xml
2.0/adr-isal/: index.html
2.0/adr-sans-io-codec/: index.html
2.0/api/: index.html
2.0/codec/: index.html
2.0/contributing/: index.html
2.0/errors/: index.html
2.0/examples/: index.html
2.0/migration/: index.html
2.0/performance/: index.html
2.0/recipes/: index.html
2.0/search/: search_index.json
2.0/streaming/: index.html
adr-isal/: index.html
adr-sans-io-codec/: index.html
api/: index.html
benchmarks/: README.md  bench_common.py  bench_compare.py  bench_compression.py  bench_concurrency.py  bench_errors.py  bench_inspection.py  bench_io.py  bench_memory.py  bench_micro.py  bench_scenarios.py  bench_streaming.py  benchmarks.py  run_benchmarks.py
codec/: index.html
contributing/: index.html
docs/: adr-isal.md  adr-sans-io-codec.md  api.md  codec.md  contributing.md  errors.md  examples.md  index.md  migration.md  performance.md  recipes.md  streaming.md
errors/: index.html
examples/: index.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_112761b68efa56ea___init___py.html  z_112761b68efa56ea___main___py.html  z_112761b68efa56ea__binary_py.html  z_112761b68efa56ea__codec_async_py.html  z_112761b68efa56ea__common_py.html  z_112761b68efa56ea__engine_py.html  z_112761b68efa56ea__inspection_py.html  z_112761b68efa56ea__metadata_py.html  z_112761b68efa56ea__streaming_py.html  z_112761b68efa56ea__text_py.html  z_112761b68efa56ea_codec_py.html
migration/: index.html
performance/: index.html
plans/: ENGINE_AND_READLINE_PLAN.md  RELEASE_2_0_0A1_PLAN.md  TEST_SUITE_REFACTOR_PLAN.md
plans/benchmarks/: v1.11.0-baseline.md  v2.0.0a1-candidate.md
recipes/: index.html
scripts/: check_branch_fresh.sh  check_py38_compat.py
search/: search_index.json
src/: __init__.py  aiogzip.py
src/aiogzip/: __init__.py  __main__.py  _binary.py  _codec_async.py  _common.py  _engine.py  _inspection.py  _metadata.py  _streaming.py  _text.py  codec.py
streaming/: index.html
tests/: conftest.py  test_aiocsv.py  test_aiogzip.py  test_append_mode.py  test_batched_readline.py  test_benchmark_runner.py  test_binary_io.py  test_cli.py  test_codec_async.py  test_codec_decoder.py  test_codec_encoder.py  test_codec_engine_accounting.py  test_codec_lifecycle.py  test_codec_purity.py  test_compress_chunks.py  test_convenience.py  test_coverage_gaps.py  test_doc_examples.py  test_edge_cases_and_errors.py  test_engine.py  test_factory_api.py  test_factory_typing.py  test_fast_compress.py  test_file_lifecycle.py  test_fileobj.py  test_hypothesis_parity.py  test_inspection.py  test_interop.py  test_modes_and_api.py  test_newline_detection.py  test_performance.py  test_protocols_and_paths.py  test_public_exports.py  test_readinto.py  test_readline_longline.py  test_regressions.py  test_review_gaps.py  test_seek_plain_fast.py  test_streaming.py  test_streaming_encoder.py  (+3 more)
tests/typing/: check_factory_overloads.py
