[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiogzip"
dynamic = ["version"]
authors = [
  { name="Geoff Davis", email="geoff@keksi.ai" },
]
description = "Asynchronous gzip file reader/writer with aiocsv support."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Topic :: System :: Archiving :: Compression",
]
dependencies = [
    "aiofiles>=23.0.0",
]
[project.optional-dependencies]
csv = [
    "aiocsv>=1.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio",
    "pytest-cov>=4.0.0",
    "psutil",
    "tomli; python_version < \"3.11\"",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
    "types-aiofiles",
    "pre-commit",
]
[project.urls]
Homepage = "https://github.com/geoff-davis/aiogzip"
"Source Code" = "https://github.com/geoff-davis/aiogzip"
"Bug Tracker" = "https://github.com/geoff-davis/aiogzip/issues"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["aiogzip"]

[tool.setuptools.dynamic]
version = { attr = "aiogzip.__version__" }

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501"]  # Line too long (handled by formatter usually, but good to ignore)

[tool.ruff.lint.per-file-ignores]
"src/aiogzip.py" = ["E402"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
