[build-system]
# NOTE: PEP 639 (license = "MIT" SPDX string + license-files) is deferred to
# 2.0: it needs setuptools >= 77, which requires Python >= 3.9 at build time,
# and CI's editable install on the 3.8 leg builds from source. Until 3.8/3.9
# are dropped, keep the legacy license table below despite the deprecation
# warning from newer setuptools.
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiogzip"
dynamic = ["version"]
authors = [
  { name="Geoff Davis", email="geoff@keksi.ai" },
]
description = "Asynchronous gzip file reader/writer with aiocsv support."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["gzip", "async", "asyncio", "compression", "aiofiles", "zlib"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    # Remove this classifier when the PEP 639 migration lands in 2.0 (639
    # forbids license classifiers alongside an SPDX license expression).
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Topic :: System :: Archiving :: Compression",
    "Typing :: Typed",
]
dependencies = [
    "aiofiles>=23.0.0",
]
[project.optional-dependencies]
csv = [
    "aiocsv>=1.2.0",
]
fast = [
    "zlib-ng>=0.4.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "psutil",
    "tomli; python_version < \"3.11\"",
    # Keep in sync with the ruff-pre-commit rev in .pre-commit-config.yaml;
    # dependabot bumps this pin but nothing updates pre-commit revs.
    "ruff==0.15.20",
    "mypy>=1.0.0",
    "ty>=0.0.1a16",
    "types-aiofiles",
    "typing_extensions",
    "pre-commit",
]
[project.urls]
Homepage = "https://github.com/geoff-davis/aiogzip"
Documentation = "https://geoff-davis.github.io/aiogzip/"
Changelog = "https://github.com/geoff-davis/aiogzip/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/geoff-davis/aiogzip"
"Bug Tracker" = "https://github.com/geoff-davis/aiogzip/issues"

[tool.uv]
# The lockfile pins the dev environment only (CI installs unpinned via pip
# across 3.8-3.14), and dev machines run modern Python. Restricting the lock
# to >= 3.10 drops the marker-gated 3.8/3.9 branches, whose urllib3/wheel
# pins are frozen at versions with known CVEs (the fixes dropped old
# Pythons). To test on 3.8/3.9 locally, use pip/pyenv (see CLAUDE.md), not
# `uv run --python 3.8`. Remove when 3.8/3.9 support is dropped in 2.0.
environments = ["python_full_version >= '3.10'"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["aiogzip"]

[tool.setuptools.package-data]
"aiogzip" = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "aiogzip.__version__" }

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501"]  # Line too long (handled by formatter usually, but good to ignore)

[tool.ruff.lint.per-file-ignores]
"src/aiogzip/__init__.py" = ["E402"]

[tool.mypy]
# Newer mypy releases keep dropping support for older python_version values
# (1.15 dropped 3.8; later releases dropped 3.9 — "must be 3.10 or higher").
# This only sets the type-checking semantics; the real 3.8 floor is enforced
# by the test matrix and the pre-commit `python38-compat` hook (PEP 585/604).
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: long-running performance/memory tests (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/aiogzip"]
branch = true
relative_files = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
