[build-system]
requires = ["flit_core>=3.11,<5"]
build-backend = "flit_core.buildapi"

[project]
name = "aiogzip"
dynamic = ["version"]
authors = [
  { name="Geoff Davis", email="geoff@keksi.ai" },
]
description = "Asynchronous gzip file reading and writing for Python asyncio — aiofiles-style API, streaming text/binary modes, decompression-bomb guards, optional zlib-ng acceleration."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["gzip", "async", "asyncio", "compression", "decompression", "aiofiles", "zlib", "zlib-ng", "file-io"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Topic :: System :: Archiving :: Compression",
    "Typing :: Typed",
]
dependencies = [
    "aiofiles>=23.0.0",
]
[project.optional-dependencies]
csv = [
    "aiocsv>=1.2.0",
]
fast = [
    "zlib-ng>=0.4.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
# What the CI test matrix installs. mypy and types-aiofiles live here (not in
# dev) because test_factory_typing.py shells out to `mypy --strict`; dropping
# them would silently skip that test.
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "psutil",
    "mypy>=1.0.0",
    "types-aiofiles",
]
dev = [
    "aiogzip[test]",
    # Update manually with the ruff-pre-commit rev in .pre-commit-config.yaml;
    # Dependabot ignores this pin because it cannot update both locations.
    "ruff==0.15.20",
    "ty>=0.0.1a16",
    "prek",
]
[project.urls]
Homepage = "https://github.com/geoff-davis/aiogzip"
Documentation = "https://geoff-davis.github.io/aiogzip/"
Changelog = "https://github.com/geoff-davis/aiogzip/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/geoff-davis/aiogzip"
"Bug Tracker" = "https://github.com/geoff-davis/aiogzip/issues"

[tool.uv]
# The lockfile pins the development environment only; CI deliberately installs
# unpinned dependencies. Keep local resolution aligned with the 2.0 floor.
environments = ["python_full_version >= '3.11'"]

[tool.flit.sdist]
include = [
    "CHANGELOG.md",
    "SECURITY.md",
    "mkdocs.yml",
    "benchmarks/",
    "docs/",
    "scripts/",
    "tests/",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long (handled by formatter usually, but good to ignore)
    # Raising the target to Python 3.11 must not turn WP0 into a repository-wide
    # annotation/import rewrite. Touched code may modernize deliberately.
    "UP006",
    "UP007",
    "UP035",
    "UP045",
]

[tool.ruff.lint.per-file-ignores]
"src/aiogzip/__init__.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: long-running performance/memory tests (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/aiogzip"]
branch = true
relative_files = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
